# sample-aws-genai-ops-demos

./: .gitignore  README.md  executive-summary.md
cost-optimization/ai-graviton-migration-assessment/: ARCHITECTURE.md  README.md  assess-graviton.ps1  assess-graviton.sh  buildspec.yml
cost-optimization/aws-genai-cost-optimization-mcp-server/: README.md
cost-optimization/graviton-migration-assessment/: .gitignore  ARCHITECTURE.md
operations-automation/ai-documentation-generation/: ARCHITECTURE.md  README.md  buildspec.yml  generate-docs.ps1  generate-docs.sh
operations-automation/ai-legacy-system-browser-automation/: ARCHITECTURE.md  README.md  create_ticket_agentcore.py  requirements.txt  run-demo.ps1  run-demo.sh
operations-automation/ai-password-reset-chatbot/: README.md  run-demo.ps1  run-demo.sh  test_deployed_agent.py
operations-automation/anycompany-it-demo-portal/: .gitignore  ARCHITECTURE.md  README.md  deploy-all.ps1  deploy-all.sh  package.json
operations-automation/automated-documentation-generation/: ARCHITECTURE.md  README.md  buildspec.yml  deploy-codebuild.ps1  deploy-codebuild.sh  generate-docs.ps1  generate-docs.sh
operations-automation/aws-services-lifecycle-tracker/: README.md  deploy-all.ps1  deploy-all.sh
operations-automation/legacy-system-automation/: ARCHITECTURE.md  README.md  create_database.py  install-nova-act-workflow.ps1  install-nova-act-workflow.sh  requirements.txt  (+2 more)
resilience/ai-chaos-engineering-with-fis/: README.md  pyproject.toml
resilience/ai-chaos-engineering-with-fis/power/: POWER.md  mcp.json
resilience/ai-chaos-engineering-with-fis/power/steering/: advanced-patterns.md  getting-started.md
resilience/ai-chaos-engineering-with-fis/src/aws_chaos_engineering/: __init__.py  __main__.py  fis_cache.py  prompt_templates.py  server.py  validators.py
resilience/ai-chaos-engineering-with-fis/tests/: __init__.py
shared/: README.md
(+70 files in other folders)
